Change-Id: Ib198dbeb56400386afbcfb8bdc72e958e3fa81c1 Signed-off-by: qingfengyijiu <qingfengyi2010@sina.com>

--- a/manage/src/main/webapp/WEB-INF/web.xml
+++ b/manage/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,19 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8" ?>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+		http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+		
 	<display-name>hg-manage</display-name>
+	
+	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>manage.root</param-value>
+	</context-param>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring/spring-context-*.xml</param-value>
+		<param-value>classpath:/spring/spring-context-*.xml</param-value>
 	</context-param>
 	
 	<filter>
@@ -26,17 +32,21 @@
 	
 	<servlet>
 		<servlet-name>spring</servlet-name>
-		<servlet-class>org.srpingframework.web.servlet.DispatcherServlet</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>META-INF/spring-context-*.xml</param-value>
+			<param-value>/META-INF/spring-context-*.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 	
 </web-app>
