--- a/manage/pom.xml
+++ b/manage/pom.xml
@@ -145,6 +145,24 @@
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
@@ -185,27 +203,132 @@
 	        <artifactId>spring-security-config</artifactId>
 	        <version>${org.springframework.security.version}</version>
 	    </dependency>
+	    
+	    <!-- fileupload start -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<!-- fileupload end -->
+		
+		<dependency>
+		   <groupId>commons-codec</groupId>
+		   <artifactId>commons-codec</artifactId>
+		   <version>1.6</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-httpclient</groupId>
+		    <artifactId>commons-httpclient</artifactId>
+		    <version>3.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.5</version>
+		</dependency>
+		<!-- Mybatis-Spring -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.xc</groupId>
+		  <artifactId>oracle</artifactId>
+		  <version>1.6</version>
+		</dependency>
+		<dependency>  
+	        <groupId>org.codehaus.jackson</groupId>  
+	        <artifactId>jackson-mapper-asl</artifactId>  
+	        <version>1.9.8</version>  
+	        <type>jar</type>  
+	    </dependency> 
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>freemarker</groupId>
+		    <artifactId>freemarker</artifactId>
+		    <version>2.3.9</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.xc</groupId>
+		  <artifactId>smslib</artifactId>
+		  <version>1.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.huaguo</groupId>
+		  <artifactId>pdf-fonts</artifactId>
+		  <version>1.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.huaguo</groupId>
+		  <artifactId>pdf-pd4ml</artifactId>
+		  <version>1.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.huaguo</groupId>
+		  <artifactId>pdf-ss-css2</artifactId>
+		  <version>1.0</version>
+		</dependency>
+		<dependency>
+	   	 	<groupId>com.ckeditor</groupId>
+		    <artifactId>ckeditor-java-core</artifactId>
+	    	<version>3.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.10-FINAL</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.10-FINAL</version>
+		</dependency>
+	    
 	</dependencies>
-	
-	<!-- <dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-framework-bom</artifactId>
-				<version>${org.springframework.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-				<exclusions>
-					<exclusion>
-						<groupId>org.springframework</groupId>
-						<artifactId>spring-asm</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-		</dependencies>
-	</dependencyManagement> -->
 	
 	<build>
 		<finalName>manage</finalName>
 	</build>
+	
+	<profiles>
+        <profile>
+             <id>dev</id>
+             <activation>
+             	  <activeByDefault>true</activeByDefault>
+                  <property>
+                        <name>env</name>
+                        <value>dev</value>
+                  </property>
+             </activation>
+             <properties>
+                  <huaguo.url>http://124.200.1.94:12345</huaguo.url>
+                  <huaguo.key.path>D:/upay-key/</huaguo.key.path>
+                  <WeixinServer>http://192.168.1.60:8080/adserver</WeixinServer>
+                  <app.url>http://ihuaguo.eicp.net:9090/manage</app.url>
+                  <HuoguoDB>jdbc:oracle:thin:@192.168.1.63:1521:RAC</HuoguoDB>
+                  <WebRootRealPath>/home/huaguo/data</WebRootRealPath>
+                  <HuoguoDBUser>hggray</HuoguoDBUser>
+                  <HuoguoDBPassword>hggray</HuoguoDBPassword>
+                  <HuaguoWebRoot>/home/huaguo/applications/gray/web-2.5</HuaguoWebRoot>
+                  <ObligorUserEmail>hg_jiekuanren@163.com</ObligorUserEmail>
+                  <SWFToolPath>/usr/local/bin/pdf2swf</SWFToolPath>
+                  <SmsSendFlag>false</SmsSendFlag>
+                  <NeedRealName>false</NeedRealName>
+                  <Debug>true</Debug>
+             </properties>
+        </profile>
+	</profiles>
 </project>
