Change-Id: Icccc1d0008dc51800f3de7ce40387818535d1110 Signed-off-by: qingfengyijiu <qingfengyi2010@sina.com>

--- a/manage/pom.xml
+++ b/manage/pom.xml
@@ -109,6 +109,12 @@
 			<version>4.9</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- SPRING TEST -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
 		
 		<!-- CACHE -->
 		<dependency>
@@ -308,10 +314,6 @@
              <id>dev</id>
              <activation>
              	  <activeByDefault>true</activeByDefault>
-                  <property>
-                        <name>env</name>
-                        <value>dev</value>
-                  </property>
              </activation>
              <properties>
                   <huaguo.url>http://124.200.1.94:12345</huaguo.url>
