Change-Id: I486fb570a1e755f29f15dc43edff46ab9401cf65 Signed-off-by: qingfengyijiu <qingfengyi2010@sina.com>

--- a/manage/src/main/webapp/WEB-INF/web.xml
+++ b/manage/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/spring/spring-context-*.xml</param-value>
+		<param-value>classpath:/spring/spring-context-all.xml</param-value>
 	</context-param>
 	
 	<filter>
