--- a/manage/pom.xml
+++ b/manage/pom.xml
@@ -14,6 +14,7 @@
 		<org.springframework.security.version>4.0.1.RELEASE</org.springframework.security.version>
 		<org.slf4j.version>1.5.10</org.slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
+		<com.fasterxml.jackson.version>2.6.0</com.fasterxml.jackson.version>
 	</properties>
 	
 	<dependencies>
@@ -250,16 +251,22 @@
 		  <artifactId>oracle</artifactId>
 		  <version>1.6</version>
 		</dependency>
-		<dependency>  
-	        <groupId>org.codehaus.jackson</groupId>  
-	        <artifactId>jackson-mapper-asl</artifactId>  
-	        <version>1.9.8</version>  
-	        <type>jar</type>  
-	    </dependency> 
+		
+		<!-- JSON -->
 		<dependency>
-		    <groupId>com.googlecode.json-simple</groupId>
-		    <artifactId>json-simple</artifactId>
-		    <version>1.1.1</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${com.fasterxml.jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${com.fasterxml.jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		
 		<dependency>
