Change-Id: I3d2c513cf59e60b80be8725a8e5a6dfd6ca2ec76 Signed-off-by: qingfengyijiu <qingfengyi2010@sina.com>

--- a/manage/pom.xml
+++ b/manage/pom.xml
@@ -22,6 +22,16 @@
 			<groupId>com.huaguo</groupId>
 			<artifactId>hg-common</artifactId>
 			<version>1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.jackson</groupId>
+					<artifactId>jackson-mapper-asl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.googlecode.json-simple</groupId>
+					<artifactId>json-simple</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.huaguo</groupId>
